fixed horizontal scrolling issue on mobile

--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -1,5 +1,11 @@
-body {
-    font-size: 0;
-    margin: 0;
-    padding: 0;
+html {
+    max-width: 100%;
+    overflow-x: hidden;
+    body {
+        font-size: 0;
+        margin: 0;
+        max-width: 100%;
+        overflow-x: hidden;
+        padding: 0;
+    }
 }
